# llvm-crash-analyzer

./: Lyceum_PAC_Jan2021.pptx  README.md
.github/: CODEOWNERS  settings.yml
llvm-10.0.1/crash-blamer/: CMakeLists.txt  NOTES.txt  crash-blamer.cpp
llvm-10.0.1/crash-blamer/examples/: base-case.dot  if-else-2.dot
llvm-10.0.1/crash-blamer/include/Analysis/: ConcreteReverseExec.h  MachineLocTracking.h  RegisterEquivalence.h  TaintAnalysis.h  TaintDataFlowGraph.h
llvm-10.0.1/crash-blamer/include/CoreFile/: CoreFile.h
llvm-10.0.1/crash-blamer/include/Decompiler/: Decompiler.h  FixRegStateFlags.h
llvm-10.0.1/crash-blamer/lib/: CMakeLists.txt
llvm-10.0.1/crash-blamer/lib/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  MachineLocTracking.cpp  RegisterEquivalence.cpp  TaintAnalysis.cpp  TaintDataFlowGraph.cpp
llvm-10.0.1/crash-blamer/lib/CoreFile/: CMakeLists.txt  CoreFile.cpp
llvm-10.0.1/crash-blamer/lib/Decompiler/: CMakeLists.txt  Decompiler.cpp  FixRegStateFlags.cpp
llvm-10.0.1/crash-blamer/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
llvm-10.0.1/crash-blamer/test/Analysis/: alias1.mir  analysis-O1-case.test  analysis-src-dest.test  arrayoverflow-0.mir  arrayoverflow-1.mir  bad-returned-value.mir  badoffset0.c.mir  base-case-O2.mir  call-to-fn-out-of-bt-ret-val-tainted.mir  callee-not-in-bt-0.mir  crash-bt-caller-0.mir  crash-bt-caller-1.mir  failed-analysis-no-blame-operands.test  global-0.mir  if-else-1-0.mir  if-else-1-0.test  if-else-1-1.mir  if-else-1-1.test  if-else-2-0.mir  if-else-2-1.mir  if-else-2-1.test  if-else.mir  inline-O2-frames.mir  machine-loc-tracking.test  multilib-case.test  multiple-paths.mir  multiple-paths2.mir  multiple-source-files.test  no-dbg-info-example.test  null-cmp-O0-analysis.test  ptr-arith-0.mir  ptr-arith-1.mir  ptr-arith-1.test  scaled-index-addresing-mode.test  simple-backtrace-crash.mir  simple-multi-bb-0.mir  src-dest-2-analysis.test  stripped-binary.test  struct1-0.mir  struct1-1.mir  (+32 more)
llvm-10.0.1/crash-blamer/test/CoreFile/: gpregs-values.test
llvm-10.0.1/crash-blamer/test/Decompiler/: decompile-to-mir-callee-out-of-bt.test  decompile-to-mir-crash-blame-flag.test  decompile-to-mir-multilib.test  decompile-to-mir.test  decompile-to-multi-bb-switch-case.test  decompile-to-multi-bb.test  decompile-to-yaml-mir.test  disasseble.test  inline-functions.test
llvm-10.0.1/crash-blamer/test/Unit/: lit.cfg.py  lit.site.cfg.py.in
llvm-10.0.1/crash-blamer/tools/: CMakeLists.txt  crash-blamer-ta.cpp
llvm-10.0.1/crash-blamer/unittests/: CMakeLists.txt
llvm-10.0.1/crash-blamer/unittests/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  RegisterEquivalence.cpp
llvm-10.0.1/crash-blamer/unittests/Decompiler/: CMakeLists.txt  Decompiler.cpp
llvm-10.0.1/llvm-crash-analyzer/lib/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  RegisterEquivalence.cpp  TaintAnalysis.cpp  TaintDataFlowGraph.cpp
llvm-10.0.1/llvm-crash-analyzer/unittests/: CMakeLists.txt
llvm-10.0.1/llvm-crash-analyzer/unittests/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  RegisterEquivalence.cpp  TaintInfo.cpp
llvm-10.0.1/llvm-crash-analyzer/unittests/Decompiler/: CMakeLists.txt
llvm-15.0.3/llvm-crash-analyzer/: CMakeLists.txt  llvm-crash-analyzer.cpp
llvm-15.0.3/llvm-crash-analyzer/include/Analysis/: ConcreteReverseExec.h  MemoryWrapper.h  RegisterEquivalence.h  TaintAnalysis.h  TaintDataFlowGraph.h
llvm-15.0.3/llvm-crash-analyzer/include/CoreFile/: CoreFile.h
llvm-15.0.3/llvm-crash-analyzer/include/Decompiler/: Decompiler.h  FixRegStateFlags.h
llvm-15.0.3/llvm-crash-analyzer/lib/: CMakeLists.txt
llvm-15.0.3/llvm-crash-analyzer/lib/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  MemoryWrapper.cpp  RegisterEquivalence.cpp  TaintAnalysis.cpp  TaintDataFlowGraph.cpp
llvm-15.0.3/llvm-crash-analyzer/lib/CoreFile/: CMakeLists.txt  CoreFile.cpp
llvm-15.0.3/llvm-crash-analyzer/lib/Decompiler/: CMakeLists.txt  Decompiler.cpp  FixRegStateFlags.cpp
llvm-15.0.3/llvm-crash-analyzer/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
llvm-15.0.3/llvm-crash-analyzer/test/Analysis/: alias1.mir  analysis-src-dest.test  arrayoverflow-0.mir  arrayoverflow-1.mir  asm-reading-writing-unaligned.test  asm_reading_writing_unaligned.test  backup-reg-value.test  bad-returned-value.mir  badoffset0.c.mir  base-case-O2.mir  call-to-fn-out-of-bt-ret-val-tainted.mir  callee-not-in-bt-0.mir  crash-bt-caller-0.mir  crash-bt-caller-1.mir  global-0.mir  global-var-immediate.test  if-else-1-0.mir  if-else-1-1.mir  if-else-2-0.mir  if-else-2-1.mir  if-else.mir  inline-O2-frames.mir  missing-frame.test  multilib-case.test  multiple-paths.mir  multiple-paths2.mir  multiple-source-files.test  no-dbg-info-example.test  params-stack-stack.test  planted-pointer.test  pointer-add-reset-mem.test  ptr-arith-0.mir  ptr-arith-1.mir  reg-eq-in-rev-exec.test  rip-value-update.test  simple-backtrace-crash.mir  simple-multi-bb-0.mir  src-dest-2-analysis.test  start-taint-only-mem.test  stripped-binary.test  (+43 more)
llvm-15.0.3/llvm-crash-analyzer/test/CoreFile/: gpregs-values.test
llvm-15.0.3/llvm-crash-analyzer/test/Decompiler/: decompile-to-mir-callee-out-of-bt.test  decompile-to-mir-crash-blame-flag.test  decompile-to-mir-multilib.test  decompile-to-mir-nop_crashstart.test  decompile-to-multi-bb-switch-case.test  decompile-to-multi-bb.test  fall-through-call.test  inline-functions.test
llvm-15.0.3/llvm-crash-analyzer/test/LLDBServerWithGDB/: auxv-gc.gdb  auxv-gdb.gdb  auxv.c  auxv.gdb  corefile.c  corefile.gdb  lit.local.cfg  no-pie-corefile-value-check.test  pic-corefile-value-check.c  pie-corefile-value-check.test  stack-prot-corefile-value-check.test  static-corefile-value-check.test  vdso-warning-gc.gdb  vdso-warning.c  vdso-warning.gdb
llvm-15.0.3/llvm-crash-analyzer/test/Unit/: lit.cfg.py  lit.site.cfg.py.in
llvm-15.0.3/llvm-crash-analyzer/tools/: CMakeLists.txt  llvm-crash-analyzer-ta.cpp
llvm-15.0.3/llvm-crash-analyzer/unittests/Analysis/: CMakeLists.txt  ConcreteReverseExec.cpp  MemoryWrapper.cpp  RegisterEquivalence.cpp  TaintInfo.cpp
(+371 files in other folders)
